--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="ctec.stateapplication.controller" >
 
     <application
+        android:name="ctec.stateapplication.model.AndroidSaveState"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,7 +19,7 @@
         </activity>
         <activity
             android:name=".BackPageActivity"
-            android:label="@string/title_activity_back_page" >
+            android:label="BackPageActivity" >
         </activity>
     </application>
 
